--- a/public/openapi/read/topic/topic_id.yaml
+++ b/public/openapi/read/topic/topic_id.yaml
@@ -364,6 +364,8 @@ get:
                     type: number
                   scrollToMyPost:
                     type: boolean
+                  enableInstructorOnly:
+                    type: boolean
                   updateUrlWithPostIndex:
                     type: boolean
                   allowMultipleBadges:
