Add instructor only as a category object property

--- a/public/openapi/read/admin/manage/admins-mods.yaml
+++ b/public/openapi/read/admin/manage/admins-mods.yaml
@@ -93,6 +93,9 @@ get:
                         subCategoriesPerPage:
                           type: number
                           description: The number of subcategories to display on the categories and category page
+                        instructorOnly:
+                          type: boolean
+                          description: If the category is instructor only
                         moderators:
                           type: array
                           items:
