--- a/public/openapi/read/admin/manage/categories.yaml
+++ b/public/openapi/read/admin/manage/categories.yaml
@@ -46,6 +46,8 @@ get:
                           type: number
                         subCategoriesPerPage:
                           type: number
+                        instructorOnly:
+                          type: boolean
                         children:
                           type: array
                           description: Array of children categories
