--- a/public/openapi/components/schemas/CategoryObject.yaml
+++ b/public/openapi/components/schemas/CategoryObject.yaml
@@ -75,6 +75,9 @@ CategoryObject:
         subCategoriesPerPage:
           type: number
           description: The number of subcategories to display on the categories and category page
+        instructorOnly:
+          type: boolean
+          description: If the category is instructor only
     - type: object
       description: Optional properties that may or may not be present (except for `cid`, which is always present, and is only here as a hack to pass validation)
       properties:
