--- a/public/openapi/read/admin/manage/admins-mods.yaml
+++ b/public/openapi/read/admin/manage/admins-mods.yaml
@@ -94,7 +94,7 @@ get:
                           type: number
                           description: The number of subcategories to display on the categories and category page
                         instructorOnly:
-                          type: boolean
+                          type: string
                           description: If the category is instructor only
                         moderators:
                           type: array
