--- a/public/openapi/read/admin/manage/categories.yaml
+++ b/public/openapi/read/admin/manage/categories.yaml
@@ -47,7 +47,7 @@ get:
                         subCategoriesPerPage:
                           type: number
                         instructorOnly:
-                          type: boolean
+                          type: string
                         children:
                           type: array
                           description: Array of children categories
