--- a/public/openapi/write/posts/pid.yaml
+++ b/public/openapi/write/posts/pid.yaml
@@ -48,6 +48,7 @@ get:
                     type: number
                   isAnonymous:
                     type: boolean
+                    nullable: true
                   edited:
                     type: number
                   replies:
@@ -115,6 +116,7 @@ put:
                         type: boolean
                       isAnonymous:
                         type: boolean
+                        nullable: true
                       deleterUid:
                         type: number
 delete:
