--- a/install/package.json
+++ b/install/package.json
@@ -14,7 +14,8 @@
         "lint": "npx tsc && eslint --cache ./nodebb .",
         "test": "npx tsc && nyc --reporter=html --reporter=text-summary mocha",
         "coverage": "nyc report --reporter=text-lcov > ./coverage/lcov.info",
-        "coveralls": "nyc report --reporter=text-lcov | coveralls && rm -r coverage"
+        "coveralls": "nyc report --reporter=text-lcov | coveralls && rm -r coverage",
+        "flow": "flow"
     },
     "nyc": {
         "exclude": [
@@ -161,6 +162,7 @@
         "eslint": "^8.31.0",
         "eslint-config-nodebb": "0.2.1",
         "eslint-plugin-import": "2.26.0",
+        "flow-bin": "^0.231.0",
         "grunt": "1.5.3",
         "grunt-contrib-watch": "1.1.0",
         "husky": "8.0.2",
