--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -8,12 +8,12 @@ on:
     branches:
       - main
 
-defaults:
-  run:
-    shell: bash
+# defaults:
+#   run:
+#     shell: bash
 
-permissions:
-  contents: read
+# permissions:
+#   contents: read
 
 jobs:
   flow-test:
@@ -30,12 +30,12 @@ jobs:
     env:
       TEST_ENV: ${{ matrix.test_env || 'production' }}
 
-    services:
-      mongo:
-        image: 'mongo:3.7'
-        ports:
-          # Maps port 27017 on service container to the host
-          - 27017:27017
+    # services:
+    #   mongo:
+    #     image: 'mongo:3.7'
+    #     ports:
+    #       # Maps port 27017 on service container to the host
+    #       - 27017:27017
 
     steps:
       - name: Run Flow test
