remove mongo db setup

--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -52,31 +52,31 @@ jobs:
         with:
           useLockFile: false
 
-      - name: Setup on MongoDB
-        env:
-          SETUP: >-
-            {
-              "url": "http://127.0.0.1:4567",
-              "secret": "abcdef",
-              "admin:username": "admin",
-              "admin:email": "test@example.org",
-              "admin:password": "hAN3Eg8W",
-              "admin:password:confirm": "hAN3Eg8W",
+      # - name: Setup on MongoDB
+      #   env:
+      #     SETUP: >-
+      #       {
+      #         "url": "http://127.0.0.1:4567",
+      #         "secret": "abcdef",
+      #         "admin:username": "admin",
+      #         "admin:email": "test@example.org",
+      #         "admin:password": "hAN3Eg8W",
+      #         "admin:password:confirm": "hAN3Eg8W",
 
-              "database": "mongo",
-              "mongo:host": "127.0.0.1",
-              "mongo:port": 27017,
-              "mongo:username": "",
-              "mongo:password": "",
-              "mongo:database": "nodebb"
-            }
-          CI: >-
-            {
-              "host": "127.0.0.1",
-              "port": 27017,
-              "database": "ci_test"
-            }
-        run: |
-          node app --setup="${SETUP}" --ci="${CI}"
+      #         "database": "mongo",
+      #         "mongo:host": "127.0.0.1",
+      #         "mongo:port": 27017,
+      #         "mongo:username": "",
+      #         "mongo:password": "",
+      #         "mongo:database": "nodebb"
+      #       }
+      #     CI: >-
+      #       {
+      #         "host": "127.0.0.1",
+      #         "port": 27017,
+      #         "database": "ci_test"
+      #       }
+      #   run: |
+      #     node app --setup="${SETUP}" --ci="${CI}"
       - name: Run Flow test
         run: npm run flow check --all
