--- a/install/package.json
+++ b/install/package.json
@@ -105,6 +105,7 @@
         "nodebb-rewards-essentials": "0.2.1",
         "nodebb-widget-essentials": "6.0.1",
         "nodemailer": "6.8.0",
+        "node-fetch": "3.3.2",
         "nprogress": "0.2.0",
         "passport": "0.6.0",
         "passport-http-bearer": "1.0.1",
