--- a/package.json
+++ b/package.json
@@ -150,6 +150,10 @@
     },
     "devDependencies": {
         "@apidevtools/swagger-parser": "^10.1.0",
+        "@babel/cli": "^7.23.9",
+        "@babel/core": "^7.24.0",
+        "@babel/eslint-parser": "^7.24.1",
+        "@babel/preset-flow": "^7.24.0",
         "@commitlint/cli": "17.3.0",
         "@commitlint/config-angular": "17.3.0",
         "@types/async": "^3.2.16",
@@ -160,14 +164,12 @@
         "@types/validator": "^13.7.0",
         "@typescript-eslint/eslint-plugin": "^5.48.0",
         "@typescript-eslint/parser": "^5.48.0",
-        "@babel/cli": "^7.23.9",
-        "@babel/core": "^7.24.0",
-        "@babel/preset-flow": "^7.24.0",
-        "flow-bin": "^0.231.0",
+        "babel-eslint": "^10.1.0",
         "coveralls": "3.1.1",
         "eslint": "^8.31.0",
         "eslint-config-nodebb": "0.2.1",
         "eslint-plugin-import": "2.26.0",
+        "flow-bin": "^0.231.0",
         "grunt": "1.5.3",
         "grunt-contrib-watch": "1.1.0",
         "husky": "8.0.2",
