--- a/public/openapi/components/schemas/PostObject.yaml
+++ b/public/openapi/components/schemas/PostObject.yaml
@@ -11,8 +11,10 @@ PostObject:
       type: string
     isEnglish:
       type: boolean
+      nullable: true
     translatedContent:
       type: string
+      nullable: true
     uid:
       type: number
       description: A user identifier
