--- a/public/openapi/write/posts/pid.yaml
+++ b/public/openapi/write/posts/pid.yaml
@@ -51,8 +51,10 @@ get:
                     nullable: true
                   isEnglish:
                     type: boolean
+                    nullable: true
                   translatedContent:
                     type: string
+                    nullable: true
                   edited:
                     type: number
                   replies:
